--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<meta name="description" content="" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Chakra UI Svelte</title>
 		%sveltekit.head%
 	</head>
 	<body>
