feat: add poppins support fonts

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,18 @@
 		<link rel="icon" href="%sveltekit.assets%/logo-square.svg" sizes="any" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Chakra UI Svelte</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
+			rel="stylesheet"
+		/>
 		%sveltekit.head%
+		<style>
+			* {
+				font-family: Poppins, sans-serif;
+			}
+		</style>
 	</head>
 	<body>
 		<div>%sveltekit.body%</div>
