chore: eager render docs pages

--- a/src/app.html
+++ b/src/app.html
@@ -19,7 +19,7 @@
 			}
 		</style>
 	</head>
-	<body>
+	<body data-sveltekit-preload-code="eager">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
